--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,7 @@
        <div> Lony by Salif Keita</div>
       <hr class="featurette-divider">
       
+       <div> Lony by Salif Keita</div>
     
       <div class="col-md-7">
       <audio controls>
