--- a/index.html
+++ b/index.html
@@ -1449,7 +1449,7 @@
       
        <div> Lony by Salif Keita</div>
     
-      <div class="col-md-7">
+      <div class="col-md-12 featurette-divider">
       <audio controls>
         <h6>Play music </h6>
         <source src="Lony.mp3" type="audio/ogg">
