--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@ function checkTime(i) {
 <div id="dialog"  style="background-color:whit;"  style="height:150p;>
   <img class="first-slide cente-block" src="black.jpg" alt="First slide" align="cente;">
 
-  <audio controls="controls"  loop="loop" preload="auto">
+  <audio controls="autoplay controls"  loop="loop" preload="auto">
 
         <h6>Play music </h6>
         <source src="Lony.mp3" type="audio/ogg">
