--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@ p {
        
 </div>
 
-
+<a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a>
 <!--
   <div class="container marketing">
 
