--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@ p {
     
       <div class="col-md-12 featurette-divider" style="display: noe;" style="color: black">
         
-        <audio class="container-fluid audioCenter"  autoplay controls  >
+        <audio class="container-fluid audioCenter"  loop autoplay controls   >
         <h6>Play music </h6>
         <source src="Lony.mp3" type="audio/ogg">
         <sourc src="Lony.mp3" type="audio/mpeg">
